Responsive Design Fixes
- it-intro is now using a grid WIP
- fixed #about-name being cut off on mobile devices
- formatted HTML document
- Added videos back in for testing purposes

--- a/css/500pxmax.css
+++ b/css/500pxmax.css
@@ -13,4 +13,7 @@
         margin-left: 0px;
         margin-right: 0px;
     }
+    #about-name {
+        height: 9rem;
+    }
 }
